--- a/code/detail.html
+++ b/code/detail.html
@@ -14,77 +14,6 @@
     <link rel="stylesheet" href="../assets/plugins/slick/slick/slick.css">
     <link rel="stylesheet" href="../assets/plugins/slick/slick/slick-theme.css">
     <link rel="stylesheet" href="../assets/plugins/@fortawesome/fontawesome-free/css/all.min.css">
-    <!-- <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/bbbootstrap/libraries/main/xzoom.css" media="all" /> -->
-    <!-- <link rel="stylesheet" href="../assets/plugins/product/xzoom.css"> -->
-
-    <style>
-        .container {
-            max-width: 1210px;
-        }
-
-        .preview-pic {
-            overflow: hidden;
-            cursor: crosshair;
-        }
-
-        .preview {
-            display: -webkit-box;
-            display: -webkit-flex;
-            display: -ms-flexbox;
-            display: flex;
-            -webkit-box-orient: vertical;
-            -webkit-box-direction: normal;
-            -webkit-flex-direction: column;
-            -ms-flex-direction: column;
-            flex-direction: column;
-        }
-
-        @media screen and (max-width: 996px) {
-            .preview {
-                margin-bottom: 20px;
-            }
-        }
-
-        .tab-content {
-            overflow: hidden;
-        }
-
-        .tab-content img {
-            width: 100%;
-            -webkit-animation-name: opacity;
-            animation-name: opacity;
-            -webkit-animation-duration: .3s;
-            animation-duration: .3s;
-        }
-
-        @-webkit-keyframes opacity {
-            0% {
-                opacity: 0;
-                -webkit-transform: scale(3);
-                transform: scale(3);
-            }
-
-            100% {
-                opacity: 1;
-                -webkit-transform: scale(1);
-                transform: scale(1);
-            }
-        }
-
-        @keyframes opacity {
-            0% {
-                opacity: 0;
-                -webkit-transform: scale(3);
-                transform: scale(3);
-            }
-
-            100% {
-                opacity: 1;
-                -webkit-transform: scale(1);
-                transform: scale(1);
-            }
-        }
-    </style>
 </head>
 
 <body>
@@ -109,7 +38,7 @@
                 </div>
             </div>
         </div>
-        <nav class="nav-bar shadow-4">
+        <nav class="nav-bar shadow-nav">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-2 nav-bar-title">
