update page pembayaran

--- a/code/profil.html
+++ b/code/profil.html
@@ -471,7 +471,65 @@
                                 </div>
                             </div>
                             <div class="tab-pane fade" id="tab-pembayaran-content" role="tabpanel">
-                                Pembayaran
+                                <div class="card-body text-dark">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="p-3">
+                                                <h5>Hai Aditya, <br> selamat datang di halaman <br>
+                                                <strong>Pengaturan Pembayaran</strong>
+                                                </h5>
+                                                <p>
+                                                    Atur pembayaran Anda untuk meningkatkan keamanan dan kemudahan berbelanja Anda di Onlinemol.
+                                                </p>
+                                                <div class="nav flex-column list-menu" role="tablist" aria-orientation="vertical">
+                                                    <a class="nav-link active" data-toggle="pill" href="#kartu_kredit" role="tab" aria-controls="kartu_kredit" aria-selected="true">Kartu Kredit / Debit</a>
+                                                    <a class="nav-link" data-toggle="pill" href="#kredivo" role="tab" aria-controls="kredivo" aria-selected="false">Kredivo Express</a>
+                                                    <a class="nav-link" data-toggle="pill" href="#debit" role="tab" aria-controls="debit" aria-selected="false">Debit Instan</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="tab-content" id="v-pills-tabContent">
+                                                <div class="tab-pane fade show active" id="kartu_kredit" role="tabpanel" aria-labelledby="kartu_kredit-tab">
+                                                    <div class="card rounded-0">
+                                                        <div class="d-flex p-3 justify-content-between border-bottom">
+                                                            <span>Kartu Kredit / Debit</span>
+                                                            <a href="" class="text-link">Pengaturan Verifikasi</a>
+                                                        </div>
+                                                        <div class="text-center p-4">
+                                                            <p>Untuk kemudahan pembayaran kartu kredit / debit, simpan informasi kartu kredit / debit Anda.</p>
+                                                            <button class="btn  shadow-0 btn-choose-photo">Tambah Kartu Kredit / Debit</button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="tab-pane fade" id="kredivo" role="tabpanel" aria-labelledby="kredivo-tab">
+                                                    <div class="card rounded-0">
+                                                        <div class="d-flex p-3 justify-content-between border-bottom">
+                                                            <span>Kredivo</span>
+                                                            <a href="" class="text-link">Pengaturan Verifikasi</a>
+                                                        </div>
+                                                        <div class="text-center p-4">
+                                                            <p>Untuk kemudahan pembayaran Kredivo, simpan informasi kartu kredit / debit Anda.</p>
+                                                            <button class="btn  shadow-0 btn-choose-photo">Tambah Kartu Kredit / Debit</button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="tab-pane fade" id="debit" role="tabpanel" aria-labelledby="kreedit-tab">
+                                                    <div class="card rounded-0">
+                                                        <div class="d-flex p-3 justify-content-between border-bottom">
+                                                            <span>debit</span>
+                                                            <a href="" class="text-link">Pengaturan Verifikasi</a>
+                                                        </div>
+                                                        <div class="text-center p-4">
+                                                            <p>Untuk kemudahan pembayaran debit, simpan informasi kartu kredit / debit Anda.</p>
+                                                            <button class="btn  shadow-0 btn-choose-photo">Tambah Kartu Kredit / Debit</button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                             <div class="tab-pane fade" id="tab-beli-content" role="tabpanel">
                                 Beli Langsung
@@ -634,7 +692,7 @@
             <div class="modal-body">
                 <div class="p-3">
                     <p>Apakah Anda yakin ingin menjadikan "Rumah" sebagai alamat utama? Anda hanya dapat memilih satu alamat utama.</p>
-                    <div class="d-flex justify-content-between"">
+                    <div class="d-flex justify-content-between">
                         <button class="btn btn-outline-success btn-block mr-1" data-mdb-dismiss="modal">Batal</button>
                         <button class="btn btn-success btn-block m-0 ml-1">Jadikan Alamat Utama</button>
                     </div>
