--- a/code/profil.html
+++ b/code/profil.html
@@ -705,6 +705,9 @@
                                                             </div>
                                                             <div class="profile-card-seperator"></div>
                                                         </div>
+                                                        <div class="text-right mt-2">
+                                                            <a href="" >Keluar dari semua perangkat</a>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -713,7 +716,15 @@
                                 </div>
                             </div>
                             <div class="tab-pane fade" id="tab-google-content" role="tabpanel">
-                                Google Authenticator
+                                <div class="card-body">
+                                    <div class="text-center text-dark w-75 m-auto">
+                                        <b>Perkuat keamanan akun dengan aplikasi Google Authenticator</b>
+                                        <br><br>
+                                        <p class="f-10">Google Authenticator adalah fitur keamanan yang mempermudah Anda menjaga akun dari risiko pencurian data atau hacking.</p>
+                                        <p class="f-10">Setiap terjadi penarikan dana dan perubahan data pribadi seperti akun bank dan email, maka Anda dapat memasukkan kode keamanan dari aplikasi Google Authenticator sebagai tahap verifikasi.</p>
+                                        <button class="btn btn-success btn-block mt-4 p-3">Aktifkan Google Authenticator</button>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <!-- Tabs content -->
