--- a/code/pesanan_dikomplain.html
+++ b/code/pesanan_dikomplain.html
@@ -142,7 +142,7 @@
                                     <div class="col-12">
                                         <a href="" class="d-flex justify-content-between">
                                             <div>OVO cash</div>
-                                            <div>Rp. 10.000.000.000</div>
+                                            <div>Rp. 10000</div>
                                         </a>
                                         <a href="" class="d-flex justify-content-between">
                                             <div>OVO points</div>
@@ -322,32 +322,32 @@
                                                     <div class="p-2">
                                                         <ul class="">
                                                             <li class="align-items-center mt-3">
-                                                                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked"/>
-                                                                <label class="form-check-label fc-text" for="flexCheckChecked">
+                                                                <input class="form-check-input" type="checkbox" name="checkbox-pengajuan" value="" id=""/>
+                                                                <label class="form-check-label fc-text" for="">
                                                                     Pengembalian Barang & Dana
                                                                 </label>
                                                             </li>
                                                             <li class="align-items-center mt-3">
-                                                                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked"/>
-                                                                <label class="form-check-label fc-text" for="flexCheckChecked">
+                                                                <input class="form-check-input" type="checkbox" name="checkbox-pengajuan" value="" id=""/>
+                                                                <label class="form-check-label fc-text" for="">
                                                                     Kirim Barang Kurang / Tidak Lengkap
                                                                 </label>
                                                             </li>
                                                             <li class="align-items-center mt-3">
-                                                                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked"/>
-                                                                <label class="form-check-label fc-text" for="flexCheckChecked">
+                                                                <input class="form-check-input" type="checkbox" name="checkbox-pengajuan" value="" id=""/>
+                                                                <label class="form-check-label fc-text" for="">
                                                                     Pengembalian Selisih Biaya Pengiriman
                                                                 </label>
                                                             </li>
                                                             <li class="align-items-center mt-3">
-                                                                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked"/>
-                                                                <label class="form-check-label fc-text" for="flexCheckChecked">
+                                                                <input class="form-check-input" type="checkbox" name="checkbox-pengajuan" value="" id=""/>
+                                                                <label class="form-check-label fc-text" for="">
                                                                     Minta Tokopedia Investigasi Pengiriman
                                                                 </label>
                                                             </li>
                                                             <li class="align-items-center mt-3">
-                                                                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked"/>
-                                                                <label class="form-check-label fc-text" for="flexCheckChecked">
+                                                                <input class="form-check-input" type="checkbox" name="checkbox-pengajuan" value="" id=""/>
+                                                                <label class="form-check-label fc-text" for="">
                                                                     Penukaran Barang
                                                                 </label>
                                                             </li>
@@ -355,7 +355,7 @@
                                                     </div>
                                                     <div class="dropdown-divider"></div>
                                                     <div class="d-flex justify-content-between p-3">
-                                                        <a class="text-link" href="#">Hapus</a>
+                                                        <span class="text-link pointer" id="uncheck" >Hapus</span>
                                                         <a class="btn btn-success" href="#">Berlakukan</a>
                                                     </div>
                                                 </div>
@@ -385,7 +385,7 @@
                                                 <a class="p-2 ml-2 tab-label" data-mdb-toggle="tab" href="#tab-butuh-respon" role="tab">Butuh Direspon (0)</a>
                                                 <a class="p-2 ml-2 tab-label" data-mdb-toggle="tab" href="#tab-belum-dibaca" role="tab">Belum Dibaca (0)</a>
                                                 <a class="p-2 ml-2 tab-label" data-mdb-toggle="tab" href="#tab-sudah dibaca" role="tab">Sudah Dibaca (0)</a>
-                                                <a class="p-2 ml-2 text-link" href="">Reset Filter</a>
+                                                <a class="p-2 ml-2 text-link" href="javascript:;" id="reset_filter">Reset Filter</a>
                                             </div>
                                         </div>
                                     </div>
@@ -512,6 +512,16 @@
             $('.tab-label').removeClass('active');
             $(this).addClass('active');
         });
+
+        $('#uncheck').click(function(event){
+            event.stopPropagation();
+            $('.form-check-input').prop('checked', false);
+        });
+
+        $('#reset_filter').click(function(){
+            $('.tab-label').removeClass('active');
+        })
+
         $('a[data-mdb-toggle="tab"]').on('show.bs.tab', function(e) {
             localStorage.setItem('activeTab', $(e.target).attr('href'));
         });
