--- a/code/profil.html
+++ b/code/profil.html
@@ -44,11 +44,10 @@
                         </a>
                     </div>
                     <div class="col-6 nav-bar-search">
-                        <div class="input-group">
-                            <span class="input-group-text border-0 f-10">Kategori</span>
-                            <input type="text" class="form-control rounded" placeholder="Cari barang di sini" />
-                            <span class="input-group-text category-search-icon">
-                                <img src="../assets/WEB/ICON/ICON WEB03.svg" style="width: 22px;" class="img-fluid"
+                        <div class="input-group border rounded">
+                            <input type="text" class="form-control rounded border-0 f-10" placeholder="Cari barang disini ..." />
+                            <span class="input-group-text category-search-icon border-0">
+                                <img src="../assets/WEB/ICON/ICON WEB03.svg" class="w-20"
                                     alt="">
                             </span>
                         </div>
@@ -246,12 +245,12 @@
                             <div class="dropdown-custom">
                                 <div class="btn-dropdown-custom f-10 parent-ellipsis">
                                     <img src="../assets/WEB/ICON/ICON WEB57.svg" class="w-30" alt="">
-                                    <span class="ellipsis-80 ml-1">Toko Online Indonesia</span>
+                                    <span class="ellipsis-80 ml-1 drop-caption">Toko Online Indonesia</span>
                                 </div>
                                 <div class="content-dropdown-custom w-400-px f-10 p-3">
                                     <div class="d-flex">
                                         <img src="../assets/WEB/ICON/ICON WEB106.svg" class="w-40" alt="">
-                                        <div class="text-left">
+                                        <div class="text-left ml-1">
                                             <b>Toko Online Indonesia</b> <br>
                                             <span class="ellipsis-100 ml-1 f-8">Regular Merchant</span> <a href="" class="text-success">Upgrade menjadi power merchant</a>
                                         </div>
@@ -269,7 +268,7 @@
                             <div class="dropdown-custom">
                                 <div class="btn-dropdown-custom f-10 parent-ellipsis">
                                     <img src="../assets/WEB/ICON/ICON WEB106.svg" class="w-30" alt="">
-                                    <span class="ellipsis-80 ml-1">Lidya Saraswati</span>
+                                    <span class="ellipsis-80 ml-1 drop-caption">Lidya Saraswati</span>
                                 </div>
                                 <div class="content-dropdown-custom-right w-400-px f-10">
                                     <div class="card m-2">
@@ -524,7 +523,7 @@
                         <div class="tab-content" id="ex1-content">
                             <div class="tab-pane fade show active" id="tab-bio-content" role="tabpanel">
                                 <div class="row p-3">
-                                    <div class="col-4 left-profile">
+                                    <div class="col-md-4 left-profile">
                                         <div class="card profile-photo-container shadow-0">
                                             <div class="card-body">
                                                 <div class="row">
@@ -552,7 +551,7 @@
                                                             type="button"><span class="fa fa-lock"></span><b class="ml-1">PIN Onlinemol</b></button>
                                         </div>
                                     </div>
-                                    <div class="col-8 right-profile">
+                                    <div class="col-md-8 right-profile">
                                         <div class="row">
                                             <div class="col-12">
                                                 <h6 class="fw-bold f-11">Ubah Biodata Diri</h6>
