update page ulasan

--- a/code/ulasan_old.html
+++ b/code/ulasan_old.html
@@ -521,82 +521,10 @@
                                             </form>
                                         </div>
                                     </div>
-                                    
-                                    <div class="mt-3">
-                                        <div class="card rounded-0">
-                                            <div class="card-header bg-light">
-                                                <div class="d-flex justify-content-between f-10">
-                                                    <a href="" class="text-success">INV/20210518/MPL/1251423703</a>
-                                                    <span class="fc-text">Pesanan diterima: 22 Mei 2021, 10:45</span>
-                                                </div>
-                                            </div>
-                                            <div class="card-body">
-                                                <div class="row">
-                                                    <div class="col-6">
-                                                        <div class="d-flex mt-2 p-2">
-                                                            <img src="../assets/WEB/ICON/ICON WEB20.svg" class="w-30" alt="">
-                                                            <div class="ml-3">
-                                                                <a href="" class="text-success f-11">Grosir ATK Jakarta</a>
-                                                                <div class="item-badge">
-                                                                    <span class="red">Penjual</span>
-                                                                </div>
-                                                            </div>
-                                                            <div class="ml-auto">
-                                                                <button class="btn btn-success f-7"><i class="fa fa-plus"></i> Follow</button>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-6 border-left">
-                                                        <b class="f-10">Daftar Produk</b>
-                                                        <div class="h-150 scroll-custom p-2">
-                                                            <div class="d-flex mt-2">
-                                                                <img src="../assets/WEB/IMAGE/IMAGE WEB28.jpg" class="w-60" alt="">
-                                                                <div class="ml-2">
-                                                                    <a href="" class="text-success ellipsis-2-line f-10">Box Givi untuk motor dan sepeda matic</a>
-                                                                    <small class="f-8">Belum diulas</small>
-                                                                </div>
-                                                                <div class="d-flex align-items-center ml-3">
-                                                                    <a href="detail_ulasan.html" class="btn btn-success rounded-10 f-7">Tulis Ulasan</a>
-                                                                </div>
-                                                            </div>
-                                                            
-                                                            <div class="d-flex mt-2">
-                                                                <img src="../assets/WEB/IMAGE/IMAGE WEB28.jpg" class="w-60" alt="">
-                                                                <div class="ml-2">
-                                                                    <a href="" class="text-success ellipsis-2-line">Box Givi untuk motor dan sepeda matic</a>
-                                                                    <small class="f-8">Belum diulas</small>
-                                                                </div>
-                                                                <div class="d-flex align-items-center ml-3">
-                                                                    <a href="detail_ulasan.html" class="btn btn-success rounded-10 f-7">Tulis Ulasan</a>
-                                                                </div>
-                                                            </div>
-
-                                                            <div class="d-flex mt-2">
-                                                                <img src="../assets/WEB/IMAGE/IMAGE WEB28.jpg" class="w-60" alt="">
-                                                                <div class="ml-2">
-                                                                    <a href="" class="text-success ellipsis-2-line">Box Givi untuk motor dan sepeda matic</a>
-                                                                    <small class="f-8">Belum diulas</small>
-                                                                </div>
-                                                                <div class="d-flex align-items-center ml-3">
-                                                                    <a href="detail_ulasan.html" class="btn btn-success rounded-10 f-7">Tulis Ulasan</a>
-                                                                </div>
-                                                            </div>
-
-                                                            <div class="d-flex mt-2">
-                                                                <img src="../assets/WEB/IMAGE/IMAGE WEB28.jpg" class="w-60" alt="">
-                                                                <div class="ml-2">
-                                                                    <a href="" class="text-success ellipsis-2-line">Box Givi untuk motor dan sepeda matic</a>
-                                                                    <small class="f-8">Belum diulas</small>
-                                                                </div>
-                                                                <div class="d-flex align-items-center ml-3">
-                                                                    <a href="detail_ulasan.html" class="btn btn-success rounded-10 f-7">Tulis Ulasan</a>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
+                                    <div class="bg-light border p-3 mt-3">
+                                        <h6 class="text-center m-0 text-dark">
+                                            Tidak Ada Reputasi
+                                        </h6>
                                     </div>
                                 </div>
                             </div>
@@ -635,100 +563,6 @@
             </div>
         </div>
     </section>
-    <!-- footer -->
-    <footer class="text-center text-lg-start footer">
-      <!-- Grid container -->
-      <div class="container p-4">
-        <!--Grid row-->
-        <div class="row p-4">
-          <div class="col-8">
-            <div class="row">
-              <div class="col-4">
-                <h4 class="footer-onlinemol-bold">Onlinemol</h4>
-                <h6 class="footer-onlinemol"><a href="#">Tentang Onlinemol</a></h6>
-                <h6 class="footer-onlinemol"><a href="#">Karir</a></h6>
-                <h6 class="footer-onlinemol"><a href="#">Blog</a></h6>
-              </div>
-              <div class="col-4">
-                <h4 class="footer-onlinemol-bold">Beli</h4>
-                <h6 class="footer-onlinemol"><a href="#">Tagihan & Top Up</a></h6>
-                <h6 class="footer-onlinemol"><a href="#">Tukar Tambah Handphone</a></h6>
-                <h6 class="footer-onlinemol"><a href="#">Onlinemol COD</a></h6>
-              </div>
-              <div class="col-4">
-                <h4 class="footer-onlinemol-bold">Bantuan dan Panduan</h4>
-                <h6 class="footer-onlinemol"><a href="#">Onlinemol Care</a></h6>
-                <h6 class="footer-onlinemol"><a href="#">Syarat dan Ketentuan</a></h6>
-                <h6 class="footer-onlinemol"><a href="#">Kebijakan Privasi</a></h6>
-              </div>
-              <div class="col-4">
-                <!-- spacer -->
-              </div>
-              <div class="col-4">
-                <h4 class="footer-onlinemol-bold">Jual</h4>
-                <h6 class="footer-onlinemol"><a href="#">Pusat Edukasi Seller</a></h6>
-                <h6 class="footer-onlinemol"><a href="#">Mitra Toppers</a></h6>
-                <h6 class="footer-onlinemol"><a href="#">Daftar Official Store</a></h6>
-              </div>
-              <div class="col-4">
-                <h4 class="footer-onlinemol-bold">Keamanan</h4>
-                <img src="../assets/WEB/IMAGE/IMAGE WEB81.jpg" width="100px">
-              </div>
-              <div class="col-4">
-                <!-- spacer -->
-              </div>
-              <div class="col-4">
-                <!-- spacer -->
-              </div>
-              <div class="col-4">
-                <h4 class="footer-onlinemol-bold">Ikuti Kami</h4>
-                <span class="social-icon text-muted">
-                    <a href="">
-                        <img src="../assets/WEB/ICON/ICON WEB84.svg" width="34px" alt="">
-                    </a>
-                    <a href="">
-                        <img src="../assets/WEB/ICON/ICON WEB104.svg" width="34px" alt="">
-                    </a>
-                    <a href="">
-                        <img src="../assets/WEB/ICON/ICON WEB105.svg" width="34px" alt="">
-                    </a>
-                    <a href="">
-                        <img src="../assets/WEB/ICON/ICON WEB101.svg" width="34px" alt="">
-                    </a>
-                </span>
-              </div>
-            </div>
-          </div>
-          <div class="col-4">
-            <img src="../assets/WEB/ICON/ICON WEB19.svg" class="mall-image">
-            <br>
-            <div class="row mt-3">
-                <div class="col-6">
-                    <img src="../assets/WEB/IMAGE/IMAGE WEB10.png" class="img-fluid" alt="">
-                </div>
-                <div class="col-5">
-                    <img src="../assets/WEB/IMAGE/IMAGE WEB5.png" alt="" class="img-fluid">
-                </div>
-            </div>
-            <p class="text-center mt-3 f-10 fc-text">
-                @ 2009 - 2021, PT. Onlinemol
-            </p>
-            <div class="text-center">
-                <div class="btn-switch">
-                    <button class="primary">
-                        Indonesia
-                    </button>
-                    <button class="off">
-                        English 
-                    </button>
-                </div>
-            </div>
-          </div>
-        </div>
-        <!--Grid row-->
-      </div>
-      <!-- Grid container -->
-    </footer>
 
     <script src="../assets/js/jquery/dist/jquery.js"></script>
     <script src="../assets/js/mdb.min.js"></script>
